Creando el menu y la galeria

--- a/index.html
+++ b/index.html
@@ -35,11 +35,86 @@
                 </article>
             </div>
         </section>
-        <section class="menu" id="platillos">
-
+        <section class="menu">
+            <div class="contenedor">
+                <h3 class="titulo" id="platillos">Menú</h3>
+                <div class="contenedor-menu">
+                    <div class="contenedor-menu2">
+                        <article>
+                            <p class="categoria">De Comer</p>
+                            <div class="platillo">
+                                <p class="nombre">Seg sagitis nisl dictus</p>
+                                <p class="precio">$10</p>
+                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Seg sagitis nisl dictus</p>
+                                <p class="precio">$10</p>
+                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Seg sagitis nisl dictus</p>
+                                <p class="precio">$10</p>
+                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Seg sagitis nisl dictus</p>
+                                <p class="precio">$10</p>
+                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                            </div>
+                        </article>
+                        <article>
+                            <p class="categoria">De Tomar</p>
+                            <div class="platillo">
+                                <p class="nombre">Seg sagitis nisl dictus</p>
+                                <p class="precio">$10</p>
+                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Seg sagitis nisl dictus</p>
+                                <p class="precio">$10</p>
+                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Seg sagitis nisl dictus</p>
+                                <p class="precio">$10</p>
+                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                            </div>
+                            <div class="platillo">
+                                <p class="nombre">Seg sagitis nisl dictus</p>
+                                <p class="precio">$10</p>
+                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="galeria" id="galeria">
-
+            <div class="foto">
+                <img src="img/1.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/2.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/3.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/4.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/5.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/6.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/7.jpg" alt="">
+            </div>
+            <div class="foto">
+                <img src="img/8.jpg" alt="">
+            </div>
         </section>
         <section class="ubicacion" id="ubicacion">
 
