--- a/index.html
+++ b/index.html
@@ -117,8 +117,31 @@
             </div>
         </section>
         <section class="ubicacion" id="ubicacion">
-
+            <div class="contenedor">
+                <h3 class="titulo">Ubicacion</h3>
+                <div class="direccion">
+                    <p class="calle">2915 Prinrose Lane <br> Anahein, CA 928886</p>
+                    <p class="telefono">242-212-3424</p>
+                    <p class="correo">santosangel748(arroba)gmail.com</p>
+                </div>
+                <div class="horarios">
+                    <h4>Horarios</h4>
+                    <p class="entre-semana">Lunes a Viernes <br>8:00am-9:00pm</p>
+                    <p class="fin-semana">Sabados y Domingos <br>11:00am-8:00pm</p>
+                </div>
+            </div>
+        </section>
+        <section class="mapa">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6704.767733454253!2d-98.14169773838486!3d19.41570516852575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5faf556d6a7022ad!2sThe%20Italian%20Coffee%20Company!5e0!3m2!1ses!2smx!4v1591821594427!5m2!1ses!2smx" width="1000" height="550" 
+            frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </section>
     </section>
+    <footer>
+        <div class="contenedor">
+            <div class="copy">
+                <p>Copyright Luis Angel Santos</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
