--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
     <title>Angel's Coffee</title>
 </head>
@@ -18,7 +18,7 @@
             </nav>
             <div class="textos">
                 <h1 class="nombre"><span>Angel's </span>Coffee</h1>
-                <h3>wdddqdqdqdqwdqwdwqdqdqdwqdqdqdqdqdwqdwqdq</h3>
+                <h3>wdddqdqd qdqwdq wdwqdq dqd wqdq dqdqdqdwqdwqdq</h3>
             </div>
         </div>
     </header>
