--- a/index.html
+++ b/index.html
@@ -143,5 +143,8 @@
             </div>
         </div>
     </footer>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/efectos.js"></script>
+    <script src="js/parallax.js"></script>
 </body>
 </html>
