--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </nav>
             <div class="textos">
                 <h1 class="nombre"><span>Angel's </span>Coffee</h1>
-                <h3>wdddqdqd qdqwdq wdwqdq dqd wqdq dqdqdqdwqdwqdq</h3>
+                <h3>"No hay nada como una taza de café para estimular las células del cerebro."</h3>
             </div>
         </div>
     </header>
@@ -30,8 +30,11 @@
                 </div>
                 <article>
                     <h3>Acerca de</h3>
-                    <p>Loremdasddwefw wefwfwf wefwfwf ewfew fw fwf w f ewf w fewfwfwfw efw</p>
-                    <p>Loremdasddwefw wefwfwf wefwfwf ewfew fw fwf w f ewf w fewfwfwfw efw</p>
+                    <p>Ofrecemos tazas de café orgánico cuidando cada detalle, desde la tierra y las plantas, los tuestes y la preparación.</p><p>
+
+                         Tenemos para ustedes. Espressos, capuccinos, lattes, sorbetos, y americanos con diferentes métodos de extracción como: Driper, chemex, kalita y sifón.
+                        
+                        <br> Para acompañar el café ofrecemos pastelería y repostería.</p>
                 </article>
             </div>
         </section>
@@ -43,47 +46,47 @@
                         <article>
                             <p class="categoria">De Comer</p>
                             <div class="platillo">
-                                <p class="nombre">Seg sagitis nisl dictus</p>
-                                <p class="precio">$10</p>
-                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                                <p class="nombre">Combo Normal</p>
+                                <p class="precio">$110</p>
+                                <p class="descripcion">Pan de granos, aguacate, arúgula, queso feta, chile seco, aceite de oliva, y sal de mar</p>
                             </div>
                             <div class="platillo">
-                                <p class="nombre">Seg sagitis nisl dictus</p>
-                                <p class="precio">$10</p>
-                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                                <p class="nombre">Combo Ligero</p>
+                                <p class="precio">$95</p>
+                                <p class="descripcion">Pan de granos, hummus, arúgula, aceite de oliva, jitomate, y sal de mar</p>
                             </div>
                             <div class="platillo">
-                                <p class="nombre">Seg sagitis nisl dictus</p>
-                                <p class="precio">$10</p>
-                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                                <p class="nombre">Combo Fresco</p>
+                                <p class="precio">$65</p>
+                                <p class="descripcion">Croissant con jamón de pavo, queso orgánico, lechuga y jitomate</p>
                             </div>
                             <div class="platillo">
-                                <p class="nombre">Seg sagitis nisl dictus</p>
-                                <p class="precio">$10</p>
-                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                                <p class="nombre">Combo Delicious</p>
+                                <p class="precio">$115</p>
+                                <p class="descripcion">Baguette, jamón serrano, queso brie, mostaza dijon, aguacate, lechuga y aceite oliva</p>
                             </div>
                         </article>
                         <article>
                             <p class="categoria">De Tomar</p>
                             <div class="platillo">
-                                <p class="nombre">Seg sagitis nisl dictus</p>
-                                <p class="precio">$10</p>
-                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                                <p class="nombre">Espresso</p>
+                                <p class="precio">$35</p>
+                                <p class="descripcion">Un espresso se prepara al momento, y se saborea enseguida. </p>
                             </div>
                             <div class="platillo">
-                                <p class="nombre">Seg sagitis nisl dictus</p>
-                                <p class="precio">$10</p>
-                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                                <p class="nombre">Cortado</p>
+                                <p class="precio">$41</p>
+                                <p class="descripcion">Café expreso con un chorrito de leche para suavizar su sabor y rebajar el grado de amargura del café.</p>
                             </div>
                             <div class="platillo">
-                                <p class="nombre">Seg sagitis nisl dictus</p>
-                                <p class="precio">$10</p>
-                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                                <p class="nombre">Cappuccino</p>
+                                <p class="precio">$49</p>
+                                <p class="descripcion">Preparado con café expreso y leche montada con vapor para otorgarle cremosidad.</p>
                             </div>
                             <div class="platillo">
-                                <p class="nombre">Seg sagitis nisl dictus</p>
-                                <p class="precio">$10</p>
-                                <p class="descripcion">Seg sagitis nisl dictus eg sagitis nisl dictus</p>
+                                <p class="nombre">Latte</p>
+                                <p class="precio">$52</p>
+                                <p class="descripcion">Un latte es una bebida de café hecha con espresso y leche al vapor.</p>
                             </div>
                         </article>
                     </div>
